:memo: 添加使用教程